<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/ic_water_hi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_notification"
                android:gravity="center"
                android:text="@string/reminder_first"
                android:textColor="@color/black" />
        </LinearLayout>

        <me.bastanfar.semicirclearcprogressbar.SemiCircleArcProgressBar
            android:id="@+id/semiCircleArcProgressBar"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="350dp"
            android:layout_height="@dimen/_168sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:percent="0"
            app:progressBarColor="#03A9F4"
            app:progressBarWidth="10"
            app:progressPlaceHolderColor="#DCDBDA"
            app:progressPlaceHolderWidth="10"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/img_heart"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:src="@drawable/ic_drought"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_34sdp"

            android:src="@drawable/icon_water_progress"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_300sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/bg_drink_home"
            android:elevation="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_click_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_30sdp" />

                <TextView
                    android:id="@+id/tv_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/1200ml"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/daily_drink"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"

                />

            <LinearLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_35sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_ml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:text="100 ml"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <ImageView
                    android:id="@+id/img_glass"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/images_glass" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_6sdp"
            app:layout_constraintTop_toBottomOf="@+id/semiCircleArcProgressBar"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:id="@+id/linearLayout3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_drink_target"
                android:elevation="@dimen/_10sdp"
                android:layout_centerInParent="true"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/img_convert"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_centerInParent="true"
            android:src="@drawable/images_glass" />
        </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/change_cup"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
             />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/arrow_blue"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirm that you have just drunk water"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/records"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_5"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/custom_backgroud"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:elevation="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_22sdp"
                        android:src="@drawable/icon_clock" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:background="#918F8F" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:background="#918F8F" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:background="#918F8F" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_time_clock_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="10:30"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next_time" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_quantity_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="100ml"
                    android:layout_marginRight="@dimen/_30sdp"
                    />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_clock_drink_water" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
